Add run tests pipeline